--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,5 @@
+Version 6.0.0 - 2021-10-08
+* Bug fixes (see git logs for details)
+
 Version 5.0.0 - 2021-04-22
 * Bug fixes (see git logs for details)
