Temporarily remove 'Party required' condition when creating/posting move

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Temporarily remove 'Party required' condition when creating/posting move
+
 Version 6.0.0 - 2021-10-08
 * Bug fixes (see git logs for details)
 
