--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+Version 6.0.1 - 2023-03-16
 * Temporarily remove 'Party required' condition when creating/posting move
 
 Version 6.0.0 - 2021-10-08
