--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
+Version 6.6.0 - 2023-09-26
 * Temporarily remove 'Party required' condition when creating/posting move
+* Bug fixes (see git logs for details)
 
 Version 6.0.0 - 2021-10-08
 * Bug fixes (see git logs for details)
